fix: Correct info in OAuth2Google authorized method and oauth2.html

--- a/myapp/templates/oauth2/oauth2.html
+++ b/myapp/templates/oauth2/oauth2.html
@@ -1,4 +1,4 @@
-{# index.html is used for homepage #}
+{# oauth2.html is used for sign-in page #}
 {%- extends "base/base.html" %}
 {% from "base/macros.html" import flash_alert, render_field_signin %}
 {% block title %}{{ title }}{%- endblock title %}
